// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CandidateRow snapshot > renders artifact_evidence auto-applied row without manual controls 1`] = `
<article
  class="flex flex-col gap-2 rounded-md border p-3 bg-[var(--color-bg-card)] border-[var(--color-border)]"
  data-candidate-id="ghi-321"
  data-confidence="high"
  data-reason="artifact_evidence"
  data-status="auto_applied"
  data-testid="candidate-row"
>
  <header
    class="flex items-center gap-2"
  >
    <span
      class="text-sm font-medium text-[var(--color-text-primary)]"
      data-testid="reason-label"
    >
      Artifact evidence
    </span>
    <span
      class="rounded-full px-2 py-0.5 font-mono text-xs uppercase bg-[var(--color-bg-hover)] text-[var(--color-text-muted)]"
      data-level="high"
      data-testid="confidence-badge"
    >
      High
    </span>
  </header>
  <div
    class="text-sm"
    data-testid="artifact"
  >
    <a
      class="underline text-[var(--color-accent-blue)] hover:text-[var(--color-border-focus)]"
      href="https://github.com/owner/repo/pull/9"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://github.com/owner/repo/pull/9
    </a>
  </div>
  <div
    class="flex items-center gap-2 text-xs text-[var(--color-text-muted)]"
    data-testid="meta"
  >
    <time
      datetime="2026-05-20T00:00:00Z"
    >
      2026-05-20T00:00:00Z
    </time>
    <span
      data-testid="status"
    >
      Auto-applied
    </span>
  </div>
</article>
`;

exports[`CandidateRow snapshot > renders pr_merged_fuzzy reason with medium confidence and disabled accept/reject when no handlers passed 1`] = `
<article
  class="flex flex-col gap-2 rounded-md border p-3 bg-[var(--color-bg-card)] border-[var(--color-border)]"
  data-candidate-id="abc-123"
  data-confidence="medium"
  data-reason="pr_merged_fuzzy"
  data-status="pending"
  data-testid="candidate-row"
>
  <header
    class="flex items-center gap-2"
  >
    <span
      class="text-sm font-medium text-[var(--color-text-primary)]"
      data-testid="reason-label"
    >
      PR merged (fuzzy match)
    </span>
    <span
      class="rounded-full px-2 py-0.5 font-mono text-xs uppercase bg-[var(--color-bg-hover)] text-[var(--color-text-muted)]"
      data-level="medium"
      data-testid="confidence-badge"
    >
      Medium
    </span>
  </header>
  <div
    class="text-sm"
    data-testid="artifact"
  >
    <a
      class="underline text-[var(--color-accent-blue)] hover:text-[var(--color-border-focus)]"
      href="https://github.com/owner/repo/pull/123"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://github.com/owner/repo/pull/123
    </a>
  </div>
  <div
    class="flex items-center gap-2 text-xs text-[var(--color-text-muted)]"
    data-testid="meta"
  >
    <time
      datetime="2026-05-20T00:00:00Z"
    >
      2026-05-20T00:00:00Z
    </time>
    <span
      data-testid="status"
    >
      Pending
    </span>
  </div>
  <div
    class="flex gap-2"
    data-testid="actions"
  >
    <button
      aria-disabled="true"
      aria-label="Accept candidate"
      class="rounded px-2 py-1 text-xs font-medium bg-[var(--color-success)] text-white hover:opacity-90 disabled:cursor-not-allowed disabled:opacity-50"
      disabled=""
      title="Not yet available"
      type="button"
    >
      Accept
    </button>
    <button
      aria-disabled="true"
      aria-label="Reject candidate"
      class="rounded px-2 py-1 text-xs font-medium bg-[var(--color-bg-hover)] text-[var(--color-text-primary)] hover:opacity-90 disabled:cursor-not-allowed disabled:opacity-50"
      disabled=""
      title="Not yet available"
      type="button"
    >
      Reject
    </button>
  </div>
</article>
`;
